# futeinf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-044b3efc030023eeba94e881114f72f408a9dab536f0f8747cdb0c6987c12ec3.json  query-3772bab54a101a88807118988d05a2b6389e24f9acafe417991f39b983aed67f.json  query-cdf9891b306e1dd72292c310f209a572a9a480dfca23f4e958773ff4e84e24df.json
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241020_003335_create_jogo_e_jogador.rs  m20241020_004011_create_jogo.rs  m20241031_011703_cria_apuracao.rs  m20241117_150055_lista_extra.rs  m20241123_213837_imagens.rs
src/: error.rs  list.rs  main.rs  ranking.rs  services.rs  templates.rs  timings.rs
src/entities/: apuracao.rs  ballot.rs  jogador.rs  jogo.rs  lista_extra.rs  mod.rs  prelude.rs
src/services/: auth.rs  lista.rs  mod.rs  ranking.rs  voting.rs
templates/: debug_ranking.html  error.html  index.html  layout.html  login.html  template.html  voting.html  voting_success.html  week_ranking.html  week_ranking_layout.html  week_ranking_not_published.html
templates/shards/: jogadores.html
