[package]
name = "fute-list"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio-rustls"] }
tera = "1.20.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
