[package]
name = "fute-list"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

actix-web = "4.9.0"
anyhow = "1.0.91"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"] }
sqlx-macros = "0.8.2"
tera = "1.20.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
sea-orm = { version = "1.0.0-rc.5", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json"], default-features = false }
rand = "0.8.5"
serde_json = "1.0.128"
chrono = { version="0.4.38", features=["serde"] }
itertools = "0.13.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
base64 = "0.22.1"
argon2 = "0.5.3"
tracing-actix-web = "0.7.15"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
secrecy = { version = "0.10.3", features = ["serde"] }
actix-multipart = "0.7.2"
futures-util = "0.3.31"




